--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -109,64 +109,46 @@ img {
 }
 
 header {
-  width:270px;
+  width:100px;
   float:left;
   position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
 header ul {
-  list-style:none;
-  height:40px;
-  padding:0;
-  background: #f4f4f4;
-  border-radius:5px;
-  border:1px solid #e0e0e0;
-  width:270px;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+    float: right;
 }
 
-header li {
-  width:89px;
-  float:left;
-  border-right:1px solid #e0e0e0;
-  height:40px;
+header li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+    text-align:center;
 }
 
-header li:first-child a {
-  border-radius:5px 0 0 5px;
+/* Change the link color on hover */
+header li a:hover {
+    background-color: #555;
 }
-
-header li:last-child a {
-  border-radius:0 5px 5px 0;
+header li:first-child a:hover {
+    color: rgb(59, 151, 46);
 }
-
-header ul a {
-  line-height:1;
-  font-size:11px;
-  color:#676767;
-  display:block;
-  text-align:center;
-  padding-top:6px;
-  height:34px;
+header li:nth-child(2) a:hover {
+    color: rgb(201, 60, 56);
 }
-
-header ul a:hover, header ul a:focus {
-  color:#675C5C;
-  font-weight:bold;
-}
-
-header ul a:active {
-  background-color:#f0f0f0;
+header li:nth-child(3) a:hover {
+    color: rgb(148, 91, 176);
 }
 
 strong {
   color:#222;
   font-weight:700;
-}
-
-header ul li + li + li {
-  border-right:none;
-  width:89px;
 }
 
 header ul a strong {
@@ -213,10 +195,6 @@ footer {
     width:auto;
   }
 
-  header {
-    padding-right:320px;
-  }
-
   section {
     border:1px solid #e5e5e5;
     border-width:1px 0;
@@ -226,31 +204,7 @@ footer {
 
   header a small {
     display:inline;
-  }
-
-  header ul {
-    position:absolute;
-    right:50px;
-    top:52px;
-  }
-}
-
-@media print, screen and (max-width: 720px) {
-  body {
-    word-wrap:break-word;
-  }
-
-  header {
-    padding:0;
-  }
-
-  header ul, header p.view {
-    position:static;
-  }
-
-  pre, code {
-    word-wrap:normal;
-  }
+  } 
 }
 
 @media print, screen and (max-width: 480px) {
@@ -273,39 +227,4 @@ footer {
     font-size:12pt;
     color:#444;
   }
-}
-
-header2 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 200px;
-    background-color: #f1f1f1;
-    position:absolute;
-    right:50px;
-    top:52px;
-}
-
-header2 li a {
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
-}
-
-/* Change the link color on hover */
-header2 li a:hover {
-    background-color: #555;
-}
-
-header2 li:first-child a:hover {
-    color: rgb(59, 151, 46);
-}
-
-header2 li:nth-child(2) a:hover {
-    color: rgb(201, 60, 56);
-}
-
-header2 li:nth-child(3) a:hover {
-    color: rgb(148, 91, 176);
 }
