--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -115,8 +115,8 @@ header {
   -webkit-font-smoothing:subpixel-antialiased;
     ul {
     list-style-type: none;
-    margin: 0;
-    padding: 1em;
+    margin-top: -2em;
+    padding: 2em;
     width: 100%;
     background-color: #f1f1f1;
       li {
