--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -115,33 +115,31 @@ header {
   -webkit-font-smoothing:subpixel-antialiased;
     ul {
     list-style-type: none;
-    margin-top: -2em;
+    
     padding: 2em;
     width: 100%;
     background-color: #f1f1f1;
       li {
       float: right;
+      margin-top: -2.5em;
       padding: 2em;
       display:inline-flex;
       text-align:center;
       color:#000;
-         &:hover{background-color: #555;}
+         &:hover{background-color: #555;
+          font-size:14px;   
+           color:#222;}
         a{
         text-decoration: none;
-         strong {font-size:14px;   
-           color:#222;}
+//          strong {
+//            font-size:14px;   
+//            color:#222;}
        
       }
     }
   }
 }
-// header li a {
-//     display: block;
-//     color: #000;
-//     padding: 8px 16px;
-//     text-decoration: none;
-//     text-align:center;
-// }
+
 
 /* Change the link color on hover */
 header li a:hover {
@@ -156,17 +154,6 @@ header li:nth-child(2) a:hover {
 header li:nth-child(3) a:hover {
     color: rgb(148, 91, 176);
 }
-
-// strong {
-//   color:#222;
-//   font-weight:700;
-// }
-
-// header ul a strong {
-//   font-size:14px;
-//   display:block;
-//   color:#222;
-// }
 
 section {
   width:500px;
