--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -116,7 +116,7 @@ header {
     ul {
     list-style-type: none;
     
-    padding: 2em;
+    padding: 2em 0;
     width: 100%;
     background-color: #f1f1f1;
       li {
@@ -143,16 +143,16 @@ header {
 
 
 /* Change the link color on hover */
-header li:hover {
+header li a:hover {
     background-color: #555;
 }
-header li:first-child:hover {
+header li:first-child a:hover {
     color: rgb(59, 151, 46);
 }
-header li:nth-child(2):hover {
+header li:nth-child(2) a:hover {
     color: rgb(201, 60, 56);
 }
-header li:nth-child(3):hover {
+header li:nth-child(3) a:hover {
     color: rgb(148, 91, 176);
 }
 
