--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,29 @@
 <header>
-
+<div id="navbar">
+    
+    <div class="logo">
+    <ul>
+        <li>
     <a href="{{ '/' | prepend:site.baseurl }}">
         <img src="assets/julianeurologo.png">
     </a>
-
-    <ul class="navbar">
+        </li>
+      <li>
+          <h1>{{ site.title }}</h1>
+     </li>
+        
+    </ul>
+      </div>
+    
+    <div class="linkbar"> 
+    <ul>
+    
         <li><a href="{{ '/packages' | prepend: site.baseurl }}">Packages</a></li>
         <li><a href="{{ '/papers' | prepend: site.baseurl }}">Papers</a></li>
         <li><a href="{{ '/people' | prepend: site.baseurl }}">People</a></li>
     </ul>
 
-    <h1>{{ site.title }}</h1>
+    </div> 
+    </div>
     <!-- <p>{{ site.description | default: site.github.project_tagline }}</p> -->
 </header>
