--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -110,7 +110,7 @@ img {
 
 header {
   #navbar {
-  padding: 2.5em 0;
+  padding: 1em 0;
   width:100%;
   float:left;
   position:fixed;
@@ -124,20 +124,28 @@ header {
         }
         list-style-type: none;
         li {
+          h1{
+           margin-left:-2em; 
+          }
           float: left;
           img{
-            max-width:35%;
+            margin-top:-1.5em;
+            max-width:55%;
           }
         }
       }
     }
     
     .linkbar{
+      margin-right: 4em;
+      width: 50%;
+      float: right;
      ul {
       list-style-type: none;
+        float: right;
       width: 100%;
        li{
-         float: right;
+         padding: 2em;
          display:inline-flex;
           text-align:center;
           color:#000;
