--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -185,9 +185,8 @@ header #navbar .linkbar li:nth-child(3) a:hover {
 }
 
 section {
-  width:500px;
-  float:right;
-  padding-bottom:50px;
+  padding: 9em 0 0 4em;
+  width:100%;
 }
 
 small {
