--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -224,7 +224,7 @@ footer {
   section {
     border:1px solid #e5e5e5;
     border-width:1px 0;
-    padding:9em 0 0 4em;
+    padding:9em .2em 4em .2em;
     margin:0 0 20px;
   }
 
