--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -257,6 +257,7 @@ footer {
   }
   
   .linkbar{ 
+    width:100% !important;
     ul{
      list-style-type: none !important;
     float: initial !important; 
