--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -257,6 +257,7 @@ footer {
   }
   
   .linkbar{ 
+    margin: 1em 0 0 1em!important;
     width:100% !important;
     ul{
      list-style-type: none !important;
