--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -237,6 +237,12 @@ footer {
   body {
     padding:15px;
   }
+#navbar {
+  margin: -2em 2em -1em -2em !important;
+    padding: 1em 0 !important;
+    width: 104% !important;
+  }
+  
 .logo {
   
   width: 100% !important;
