--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -279,6 +279,9 @@ footer {
     }
   }
   
+  section{
+       padding: 12em .2em 4em .2em !important; 
+  }
 
   header li, header ul li + li + li {
     width:33%;
