--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -155,8 +155,8 @@ box-shadow: 0px 7px 14px -5px rgba(0,0,0,0.75);
           text-align:center;
           color:#000;
           &:hover{
-           border-bottom: 5px solid #555;
-//            background-color: #555;
+//            border-bottom: 5px solid #555;
+           background-color: #555;
           font-weight: bold;
         }
          a{
