--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,9 +18,9 @@
     <div class="linkbar"> 
     <ul>
     
-        <li><a href="{{ '/packages' | prepend: site.baseurl }}">Packages</a></li>
-        <li><a href="{{ '/papers' | prepend: site.baseurl }}">Papers</a></li>
-        <li><a href="{{ '/people' | prepend: site.baseurl }}">People</a></li>
+        <li><<a href="{{ '/packages' | prepend: site.baseurl }}"><div>Packages</div></a></li>
+        <li><a href="{{ '/papers' | prepend: site.baseurl }}"><div>Papers</div></a></li>
+        <li><a href="{{ '/people' | prepend: site.baseurl }}"><div>People</div></a></li>
     </ul>
 
     </div> 
