--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -302,7 +302,8 @@ footer {
 
 
 // feel free to add this to a seperate file for more modularity and cleanliness.
-// Note: These breakpoints only cover portrait layouts. If you want to cover all end users, you can consider specific breakpoints for Iphone and Samsung models.
+// Note: These breakpoints only cover portrait layouts. If you want to cover all end users, you can consider
+// specific breakpoints for Iphone and Samsung models.
 
 /* Smartphones (portrait) ----------- */
 @media only screen and (max-width : 320px) {
