--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -111,7 +111,7 @@ img {
 
 header {
   #navbar {
-   
+
   margin: -1em 1em -1em -1em;
   padding: 1em 0;
   width:101%;
@@ -131,17 +131,18 @@ box-shadow: 0px 7px 14px -5px rgba(0,0,0,0.75);
         list-style-type: none;
         li {
           h1{
-           margin-left:-2em; 
+           margin-left:-2em;
           }
           float: left;
           img{
             margin-top:-1.5em;
             max-width:55%;
+            width: 150px;
           }
         }
       }
     }
-    
+
     .linkbar{
       margin-right: 1em;
       float: right;
@@ -165,8 +166,41 @@ box-shadow: 0px 7px 14px -5px rgba(0,0,0,0.75);
     }
   }
 }
-    
 
+/*
+    - custom styling
+ */
+
+#landingpage h1{
+    text-align: center;
+    font-size: 40px;
+}
+
+.button{
+    display: block;
+    border: 2px solid black;
+    width: 200px;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 0 auto;
+    color: black;
+}
+
+#landingpage-section {
+    display: flex;
+    margin: 30px 0;
+    .cards{
+        flex-grow: 1;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width:760px) {
+    #landingpage-section{
+        display: block;
+        margin: 30px 0;
+    }
+}
 
 /* Change the link color on hover */
 // header #navbar .linkbar li a:hover {
@@ -199,6 +233,7 @@ hr {
 }
 
 footer {
+  text-align: center;
   width:270px;
   float:left;
   position:fixed;
@@ -240,11 +275,11 @@ footer {
     padding: 1em 0 !important;
     width: 104% !important;
   }
-  
+
 .logo {
-  
+
   width: 100% !important;
-  
+
   ul{
      width: 100% !important;
     li{
@@ -260,14 +295,14 @@ footer {
       }
     }
   }
-  
-  .linkbar{ 
+
+  .linkbar{
     margin: 1em 0 0 1em !important;
     width:100% !important;
     ul{
      list-style-type: none !important;
-    float: initial !important; 
-    
+    float: initial !important;
+
       li{
         padding: 0 .1em !important;
     margin: -1em !important;
@@ -277,17 +312,17 @@ footer {
       }
     }
   }
-  
+
   section{
-       padding: 12em .2em 4em .2em !important; 
+       padding: 12em .2em 4em .2em !important;
   }
 
   header li, header ul li + li + li {
     width:33%;
   }
-  
-  
-  
+
+
+
 }
 
 @media print {
