--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,7 @@
         <li><a href="{{ '/packages' | prepend: site.baseurl }}">Packages</a></li>
         <li><a href="{{ '/papers' | prepend: site.baseurl }}">Papers</a></li>
         <li><a href="{{ '/people' | prepend: site.baseurl }}">People</a></li>
+        <li><a href="{{ '/tutorials' | prepend: site.baseurl }}">Tutorials</a></li>
     </ul>
 
     </div> 
